--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "css-loader": "^5.2.0",
+    "file-loader": "^6.2.0",
     "next": "10.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.12.1",
+    "react-toastify": "^7.0.3",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1"
   }
 }
